ffmpeg trial started

--- a/binary_build/package.json
+++ b/binary_build/package.json
@@ -5,7 +5,9 @@
   "main": "outputTest.js",
   "scripts": {
     "compile": "node-gyp rebuild",
-    "start": "node main.js"
+    "start": "node main.js",
+    "buildpython": "pyinstaller --onefile convert.py",
+    "pythonbuild": "pyinstaller --onefile convert.py"
   },
   "keywords": [],
   "author": "",
