--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tensorflow/tfjs-node": "^1.5.1",
     "async": "^3.1.0",
     "asyncawait": "^3.0.0",
+    "canvas": "^2.6.1",
     "common-path": "^1.0.0",
     "cubic-spline": "^3.0.3",
     "deep-diff": "^1.0.2",
@@ -32,6 +33,7 @@
     "is-wav": "^1.1.2",
     "lodash": "^4.17.15",
     "matplotlib": "^1.0.0",
+    "mp3-to-wav": "^0.1.11",
     "nan": "^2.14.0",
     "napi": "0.0.0",
     "node-addon-api": "^2.0.0",
@@ -40,7 +42,10 @@
     "node-wav": "0.0.2",
     "npm-check-updates": "^3.2.2",
     "p5": "^0.10.2",
+    "pngjs": "^3.4.0",
     "python-shell": "^1.0.8",
+    "spectro": "^1.0.1",
+    "spectrogram": "0.0.7",
     "wav-spectrogram": "0.0.4",
     "wavefile": "^10.1.0"
   },
