--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
   "name": "squwbs_pro",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "preinstall": "npm install concurrently electron electron-builder wait-on cross-env",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "sudo bash run_packager.sh",
     "buildpython": "pyinstaller --onefile spline.py",
     "pythonbuild": "pyinstaller --onefile spline.py",
     "electronbuild": "sudo bash run_packager.sh",
-    "buildelectron": "sudo bash run_packager.sh"
+    "buildelectron": "sudo bash run_packager.sh",
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test",
+    "react-eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^1.5.1",
     "@tensorflow/tfjs-node": "^1.5.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "async": "^3.1.0",
     "asyncawait": "^3.0.0",
     "canvas": "^2.6.1",
     "common-path": "^1.0.0",
+    "concurrently": "^5.1.0",
+    "cross-env": "^7.0.0",
     "cubic-spline": "^3.0.3",
     "deep-diff": "^1.0.2",
     "deep-equal": "^2.0.1",
-    "electron": "^7.1.3",
+    "electron": "^7.1.11",
+    "electron-builder": "^22.3.2",
+    "electron-is-dev": "^1.1.0",
     "electron-packager": "^14.1.1",
     "electron-reload": "^1.5.0",
     "electron-spawn": "^5.0.0",
@@ -44,12 +57,37 @@
     "p5": "^0.10.2",
     "pngjs": "^3.4.0",
     "python-shell": "^1.0.8",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
+    "react-native": "^0.61.5",
+    "react-native-web": "^0.12.0",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "^3.3.1",
     "spectro": "^1.0.1",
     "spectrogram": "0.0.7",
+    "stringify-object": "^3.3.0",
+    "wait-on": "^4.0.0",
     "wav-spectrogram": "0.0.4",
-    "wavefile": "^10.1.0"
+    "wavefile": "^10.1.0",
+    "with-query": "^1.2.0"
   },
   "devDependencies": {
     "electron-rebuild": "^1.8.8"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
