--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "async": "^3.1.0",
     "asyncawait": "^3.0.0",
     "canvas": "^2.6.1",
+    "clear-module": "^4.0.0",
     "common-path": "^1.0.0",
     "concurrently": "^5.1.0",
     "connect-flash": "^0.1.1",
