--- a/Resources/app/package.json
+++ b/Resources/app/package.json
@@ -9,8 +9,8 @@
     "start-dev": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "start": "electron .",
     "build": "sudo bash run_packager.sh",
-    "buildpython": "pyinstaller --onefile squwbs_pro.py && mv /Users/bernardahn/Documents/GitHub/squwbs_pro/dist/squwbs_pro /Users/bernardahn/Documents/GitHub/squwbs_pro/MacOS/squwbs_pro && rmdir /Users/bernardahn/Documents/GitHub/squwbs_pro/dist",
-    "pythonbuild": "pyinstaller --onefile squwbs_pro.py && mv /Users/bernardahn/Documents/GitHub/squwbs_pro/dist/squwbs_pro /Users/bernardahn/Documents/GitHub/squwbs_pro/MacOS/squwbs_pro && rmdir /Users/bernardahn/Documents/GitHub/squwbs_pro/dist",
+    "buildpython": "pyinstaller --onefile squwbs_pro.py && mv ./dist/squwbs_pro ../../MacOS/squwbs_pro && rmdir ./dist",
+    "pythonbuild": "pyinstaller --onefile squwbs_pro.py && mv ./dist/squwbs_pro ../../MacOS/squwbs_pro && rmdir ./dist",
     "electronbuild": "sudo bash run_packager.sh",
     "buildelectron": "sudo bash run_packager.sh",
     "react-start": "react-scripts start",
