--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,8 @@
         "hashtable": "cpp",
         "bit": "cpp",
         "memory_resource": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "regex": "cpp",
+        "shared_mutex": "cpp"
     }
 }
