--- a/Resources/app/package.json
+++ b/Resources/app/package.json
@@ -87,6 +87,7 @@
     "react-dropzone": "^10.2.1",
     "react-native": "^0.61.5",
     "react-native-web": "^0.12.0",
+    "react-p5-wrapper": "^2.0.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "^3.3.1",
     "serve-favicon": "^2.5.0",
