--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,4 @@ tests/include/
 src/assets/node-v13.3.0-darwin-x64
 MacOS/libSystem.B.dylib
 MacOS/libz.1.dylib
+Resources/app/src/assets/images/
