--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,4 @@ src/assets/node-v13.3.0-darwin-x64
 MacOS/libSystem.B.dylib
 MacOS/libz.1.dylib
 Resources/app/src/assets/images/
+Resources/squwbs_pro.app/
