--- a/Resources/app/package.json
+++ b/Resources/app/package.json
@@ -94,6 +94,7 @@
     "react-p5-wrapper": "^2.0.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "^3.3.1",
+    "restart": "^2.0.0",
     "serve-favicon": "^2.5.0",
     "spectro": "^1.0.1",
     "spectrogram": "0.0.7",
