--- a/Resources/app/package.json
+++ b/Resources/app/package.json
@@ -62,6 +62,7 @@
     "https": "^1.0.0",
     "is-wav": "^1.1.2",
     "lodash": "^4.17.15",
+    "mac-open": "^0.1.3",
     "matplotlib": "^1.0.0",
     "ml5": "^0.4.3",
     "mobile-detect": "^1.4.4",
